--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,17 +1,6 @@
-.header
+header
 {
-    color: white;
+    background-color: #FF0000;
     height: 70px;
     width: 100%;
-    border-bottom: 1px solid #CCC;
-}
-.logo-container
-{
-    margin-top: 10px;
-}
-div.logo
-{
-    background: url("../images/logo.png") left/contain no-repeat;
-    height: 60px;
-    margin-left: 20px;
 }
