--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,9 +6,29 @@ body
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    overflow: hidden;
 }
 .container
 {
     max-width: 1000px;
     margin: 30px auto;
+}
+.btn
+{
+    padding: 1rem 1.75rem;
+    color: #FFFFFF;
+    background-color: #FF5A5F;
+    font-weight: 700;
+    text-transform: capitalize;
+    font-size: 1rem;
+    cursor: pointer;
+    border: none;
+    transition: all 0.3s linear;
+}
+.btn:hover
+{
+    /* color: #FF5A5F;
+    background-color: #FFFFFF; */
+    transition: all 0.3s linear;
+    opacity: 90%;
 }
