--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,7 +6,7 @@ body
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .container
 {
