--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -140,7 +140,49 @@
     margin-bottom: 1rem;
     padding-bottom: 0.5rem;
 }
-
+.places .amenities ul
+{
+    list-style: none;
+    position: relative;
+}
+.places .amenities ul li
+{
+    margin-left: 1rem;
+    line-height: 2;
+}
+.places .amenities ul li:nth-child(1)::before
+{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("../images/icon_tv.png") center/cover no-repeat;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+}
+.places .amenities ul li:nth-child(2)::before
+{
+    content: "";
+    position: absolute;
+    /* top: 0; */
+    left: 0;
+    background: url("../images/icon_wifi.png") center/cover no-repeat;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+}
+.places .amenities ul li:nth-child(3)::before
+{
+    content: "";
+    position: absolute;
+    /* top: 0; */
+    left: 0;
+    background: url("../images/icon_pets.png") center/cover no-repeat;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+}
 .places .reviews h3
 {
     margin-bottom: 0;
@@ -153,3 +195,4 @@
 {
     margin-bottom: 2rem;
 }
+
